hard-code color var values since map-get not eval properly fix details page section title format tweak remove button style
Change-Id: Iad6a95e2122e49f653bbd82f53f96047df771ddf

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -166,8 +166,13 @@ input[type=button], input[type=submit], .button, button {
 		text-align: center;
 
 		&:before {
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 1px;
 			font-family: $icon-font;
 			content: '\2d';
+			font-size: 12px;
 		}
 	}
 	&.large {
