remove italics from progress indicator inherited from i tag
Change-Id: Id4a92d23b2749f2ac7f3cb86c0b065f955c2ea6e

--- a/packages/ui-library/src/css/progress-indicators.scss
+++ b/packages/ui-library/src/css/progress-indicators.scss
@@ -35,6 +35,7 @@
 				width: $progress-size;
 				color: transparent;
 				font-size: 0;
+				font-style: normal;
 
 				&:after {
 					position: absolute;
