ID-4571 - add right-side content bucket to the expandable row component (will be used for content common to that area : toggles, buttons, status, etc)
Change-Id: I8370648fac35aea24be3192dac35f46d187c7d12

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -2,7 +2,7 @@
 @mixin base-button-styles {
 	position: relative;
 	display: inline-block;
-	font-family: $input-font-stack;
+	font-family: $font-pn-regular;
 	background-color: map-get($colors, 'white');
 	text-align: center;
 	vertical-align: middle;
