--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -8,6 +8,7 @@
 
 // BY FUNCTIONALITY
 @import 'buttons';
+@import 'collapsible-section';
 @import 'colorpicker';
 @import 'data-sets';
 @import 'details-page';
@@ -19,7 +20,6 @@
 @import 'inputs';
 @import 'layout';
 @import 'loader';
-@import 'status-indicators';
 @import 'modals';
 @import 'multivalues';
 @import 'pagination';
@@ -28,6 +28,7 @@
 @import 'result-sets';
 @import 'row-selector';
 @import 'settings-sections';
+@import 'status-indicators';
 @import 'tables';
 @import 'tabs';
 @import 'task';
